# supereight

./: CMakeLists.txt
apps/scripts/results-alignment/cuda-ofusion-0-2020-06-08_12:34:46/: 2  2_assoc  2_log  results.pkl
apps/scripts/results-alignment/cuda-ofusion-1024-2020-06-08_12:52:41/: 22  22_assoc  22_log  results.pkl
apps/scripts/results-alignment/cuda-ofusion-128-2020-06-08_12:47:17/: 16  16_assoc  16_log  results.pkl
apps/scripts/results-alignment/cuda-ofusion-16-2020-06-08_12:41:54/: 10  10_assoc  10_log  results.pkl
apps/scripts/results-alignment/cuda-ofusion-2-2020-06-08_12:36:32/: 4  4_assoc  4_log  results.pkl
apps/scripts/results-alignment/cuda-ofusion-2048-2020-06-08_12:54:28/: 24  24_assoc  24_log  results.pkl
apps/scripts/results-alignment/cuda-ofusion-256-2020-06-08_12:49:04/: 18  18_assoc  18_log  results.pkl
apps/scripts/results-alignment/cuda-ofusion-32-2020-06-08_12:43:42/: 12  12_assoc  12_log  (+1 more)
apps/scripts/results-allocation3/: extract_integration_time.py
apps/scripts/results-initial/: gen_summary.py
apps/scripts/results-update/: extract_integration_time.py
backend/src/cuda/: allocate.cu  allocate.hpp  backend_cuda.cpp  projective_update.cu  raycast.cu
backend/src/openmp/: backend_openmp.cpp  kernels.hpp
core/: CMakeLists.txt
core/include/supereight/image/: image.hpp
core/include/supereight/memory/: buffer.hpp  buffer_enums.hpp  buffer_traits.hpp  image.hpp
core/include/supereight/utils/: cuda_util.hpp
denseslam/src/: DenseSLAMSystem.cpp  preprocessing.cpp
tracking/src/: tracker.cpp  tracking_kernels.hpp
(+713 files in other folders)
